fix image gap

--- a/src/components/ThreeProjects/ThreeProjects.css
+++ b/src/components/ThreeProjects/ThreeProjects.css
@@ -90,6 +90,10 @@
   height: 90%;
 }
 
+.slider > div {
+  left: 1px!important;
+}
+
 @media (max-width: 900px) {
   .slider {
     width: 90%;
